--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "wensday-bot",
+  "name": "wednesday-bot",
   "version": "1.0.0",
-  "description": "It's wensday my dudes",
+  "description": "It's wednesday my dudes",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Yopaman/wensday-bot.git"
+    "url": "git+https://github.com/Yopaman/wednesday-bot.git"
   },
   "keywords": [
-    "wensday",
+    "wednesday",
     "my",
     "dudes"
   ],
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Yopaman/wensday-bot/issues"
   },
-  "homepage": "https://github.com/Yopaman/wensday-bot#readme"
+  "homepage": "https://github.com/Yopaman/wensday-bot#readme",
+  "dependencies": {
+    "discord.js": "^11.3.0",
+    "node-schedule": "^1.3.0"
+  }
 }
